--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -5,7 +5,7 @@
     android:id="@+id/tvPython"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CourseActivity">
+    tools:context="activity_course">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView5"
