--- a/app/src/main/res/layout/activity_splash2.xml
+++ b/app/src/main/res/layout/activity_splash2.xml
@@ -5,7 +5,7 @@
     android:id="@+id/tvDescription"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity">
+    tools:context="Activity.SplashActivity">
 
     <TextView
         android:id="@+id/tvCourseName"
