--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,7 +5,7 @@
     android:id="@+id/edForgotPassword"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondFragment">
+    tools:context="Activity.SecondFragment">
 
     <TextView
         android:id="@+id/textview_second"
